--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "jest": "^27.2.4",
     "ts-jest": "^27.0.5",
     "tslint": "^6.1.3",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "fp-ts": "^2.11.4",
+    "jest-ts-auto-mock": "^2.0.0",
+    "ts-auto-mock": "^3.5.0",
+    "ts-mockito": "^2.6.1"
   }
 }
