--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "target": "es6",
         "noImplicitAny": true,
         "moduleResolution": "node",
+        "resolveJsonModule": true,
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
@@ -12,7 +13,13 @@
             "*": [
                 "node_modules/*"
             ]
-        }
+        },
+        "plugins": [
+            {
+              "transform": "ts-auto-mock/transformer",
+              "cacheBetweenTests": false
+            }
+          ]
     },
     "include": [
         "src/**/*"
